# ecommerce

./: .coverage  .coveragerc  .flake8  .gitignore  Dockerfile  Procfile  README.md  build.sh  celery_app.py  commands.txt  config.py  db.sql  docker-compose.staging.yml  docker-compose.yml  mydb.dump  package-lock.json  pyproject.toml  render.yaml  report.html  requirements.txt  routing.py  sqlfile.sql
cart/: urls.py
cart/test/: test_urls.py  test_views.py
cart/views/: views.py
category/: admin.py  models.py  urls.py
checkout/: admin.py  forms.py  models.py  multi_request.py  urls.py
comment/: admin.py  forms.py  models.py  serializers.py  urls.py
contact/: urls.py  views.py
customer/: admin.py  form.py  models.py  serializers.py  urls.py
ecommerce/: .env  asgi.py  celery.py  context_processors.py  settings.py  urls.py  views.py
fixtures/: Category.json  Customer.json  Notification.json  Product.json
locale_language/: apps.py  urls.py  views.py
notifications/: routing.py  urls.py  views.py
order/: admin.py  models.py  notifications.py  urls.py  views.py
schedule/: apps.py  tasks.py  urls.py  views.py
static/js/: app.js
staticfiles/: staticfiles.json
store/: admin.py  forms.py  models.py  urls.py
templates/: base.html  cart.html  chat.html  checkout.html  dash-address-add.html  dash-edit-profile.html  dash-manage-order.html  dash-my-order.html  dash-my-profile.html  dashboard.html  html.html  index.html  login.html  product_detail.html  profile.html  reset_password.html  room.html  shop.html  signin.html  wishlist.html
unit_test/: apps.py
(+169 files in other folders)
