[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["BruceNguyen01 <bruce.nguyen.goldenowl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"
gunicorn = "^20.1.0"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
